<resources>
    <string name="app_name">Parsetagram</string>
    <string name="myAppId">parsetagramId</string>
    <string name="server">https://parsetagram-fb.herokuapp.com/parse/</string>
    <string name="login">Login</string>
    <string name="noAcc">No account? Sign up here!</string>
    <string name="signUp">Sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="hintName">Name</string>
    <string name="hintEmail">Email</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="accCreated">Your account has been successfully created!</string>

    <string name="logInSuccess">You\'ve successfully logged in!</string>

    <string name="wrongCredentials">Wrong username or password. Try again.</string>

    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="postPic">Post a Picture</string>
    <string name="notifs">Notifications</string>
    <string name="profile">Profile</string>

    <string name="caption">Write a caption...</string>

    <string name="post">Post</string>

</resources>
