<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/instagram_home_filled_24"
        />
    <!--<item-->
        <!--android:id="@+id/explore"-->
        <!--android:enabled="true"-->
        <!--android:title="@string/explore"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:icon="@drawable/instagram_home_outline_24"/>-->
    <item
        android:id="@+id/postpic"
        android:enabled="true"
        android:title="@string/postPic"
        app:showAsAction="ifRoom"
        android:icon="@drawable/instagram_new_post_filled_24"/>
    <!--<item-->
        <!--android:id="@+id/notifs"-->
        <!--android:enabled="true"-->
        <!--android:title="@string/notifs"-->
        <!--app:showAsAction="ifRoom"-->
        <!--android:icon="@drawable/instagram_user_outline_24"/>-->
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:icon="@drawable/instagram_user_filled_24"/>

</menu>