<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/signUpName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/hintName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signUpEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="58dp" />

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/hintUsername"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="115dp" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="175dp" />

    <Button
        android:id="@+id/confirmSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="196dp"
        android:text="@string/signUp"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="231dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        app:srcCompat="@drawable/nav_logo_whiteout" />


</RelativeLayout>